# label-crop

./: README.md  pyproject.toml
label_crop/: lbl.py
labelcrop/: cords.py  lbl.py
