[project]
name = "LabelCrop"
version = "0.2.0"
description = "A CLI for defining crop regions on PDFs and batch cropping/rotating them. Useful for shipping labels or other PDF documents that need consistent formatting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
]

[project.scripts]
labelcrop = "labelcrop.lbl:main"
